--- a/movie_query/README.rdoc
+++ b/movie_query/README.rdoc
@@ -1,27 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* Ruby version: 2.2.0
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* How to run: Need to enter ?title= before you enter in the title of the movie to search.
 
 
 Please feel free to use a different markup language if you do not plan to run
